<?xml version="1.0" encoding="utf-8"?>
<resources>

    //Textos de la pagina de registro
    <string name="tvNombre">Nombre                 :</string>
    <string name="tvPrimerApellido">Primer Apellido:</string>
    <string name="tvSegundoApellido">Segundo Apellido:</string>
    <string name="tvCorreoElectronico">Correo Eletrónico:</string>
    <string name="tvUsuario">Usuario:</string>
    <string name="tvContrasena">Contraseña:</string>
    <string name="btnRegistrar">Registrar Ahora</string>
    <string name="title_activity_registro">Registro de usuarios</string>

    //Textos de la pagina de seleccion
    <string name="app_name">Sabor a U</string>
    <string name="btnAlmuerzos">Almuerzos</string>
    <string name="btnDesayunos">Desayunos</string>
    <string name="btnACenas">Cenas</string>
    <string name="lbInicio">¿Aún no sabes que comer?</string>

    //Textos de la barra
    <string name="action_historialDePedidos">Historial de pedidos</string>
    <string name="action_detallesDelPedido">Modificar pedido</string>

    //Textos del historial de pedidos
    <string name="title_activity_historial">Historial Completo</string>

    //Textos del detalle de pedido
    <string name="title_activity_detalles_pedido">Detalles del Pedido</string>
    <string name="title_cancelar_pedido">Cancelar pedido</string>

    //Textos de la pagina principal
     <string name="title_activity_seleccion_tiempo_alimentacion">Tiempos de Alimentación</string>
    <string name="btnRegistro">Registrar</string>
    <string name="btnInicioSesion">Iniciar Sesión</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="lbBienvenida">Bienvenido a Sabor a U</string>


    <string name="title_activity_confirmar_solicitud_alimentacion">ConfirmarSolicitudAlimentacionActivity</string>
    <string name="PedidoSolicitar">Pedido a solicitar</string>
    <string name="PlatoSolicitado">Plato: </string>
    <string name="Observaciones">Observaciones:</string>
    <string name="Solicitar">Solicitar</string>
    <string name="SolicitarActivity">Solicitud de alimentación</string>
    <string name="title_activity_consultar_platos_solicitar">Platos del día</string>
    <string name="titulo_plato_dia">Plato del día</string>
    <string name="title_activity_modificar_pedido_realizado">Modifica tu pedido</string>
    <string name="title_modificar_pedido">Pedido a modificar</string>
    <string name="btnModificar">Modificar</string>

</resources>
