<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_seleccion_tiempo_alimentacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.peditualmuerzo.SeleccionTiempoAlimentacionActivity"
    android:background="@drawable/fondo">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginTop="128dp">

    <Button
        android:text="@string/btnDesayunos"
        android:textColor="#660808"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDesayunos" />

    <Button
        android:text="@string/btnAlmuerzos"
        android:textColor="#660808"
        android:layout_width="match_parent"
        android:onClick="redireccionar"
        android:layout_height="wrap_content"
        android:id="@+id/btnAlmuerzos" />

    <Button
        android:id="@+id/btnACenas"
        android:textColor="#660808"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnACenas"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:linksClickable="false" />

</LinearLayout>

    <TextView
        android:text="@string/lbInicio"
        android:textColor="#660808"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:id="@+id/mensajeTextView" />

</RelativeLayout>
