<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="com.peditualmuerzo.RegistroActivity"
    android:background="@drawable/fondo_histotial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNombre" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Ejemplo: Víctor"
                android:ems="10"
                android:id="@+id/etNombre" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/tvPrimerApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPrimerApellido" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Ejemplo: Salvatierra"
                android:ems="10"
                android:id="@+id/etPrimerApellido" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/tvSegundoApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSegundoApellido" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Ejemplo: Mora"
                android:ems="10"
                android:id="@+id/etSegundoApellido" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/tvCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvCorreoElectronico" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Ejemplo: Victor@gmail.com"
                android:ems="10"
                android:id="@+id/etCorreoElectronico" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvUsuario" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Ejemplo: SMVictor"
                android:ems="10"
                android:id="@+id/etUsuario" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/tvContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvContrasena" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Ejemplo: abc123"
                android:ems="10"
                android:id="@+id/etContrasena" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:text="@string/btnRegistrar"
            android:onClick="nuevoUsuarioServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrar" />

    </LinearLayout>

</LinearLayout>
